objects/project_cloud__Ticket__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_ppm__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>ccpe_ppm__Portfolio__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>ccpe_ppm__Program__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Retainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retainer</label>
        <referenceTo>ccpe_r__Retainer__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>A description of what the ticket is about</description>
        <inlineHelpText>A description of what the ticket is about</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>project_cloud__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project (Rollup)</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Ticket (Rollup)</relationshipLabel>
        <relationshipName>Ticket_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase (Rollup)</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Ticket (Rollup)</relationshipLabel>
        <relationshipName>Ticket_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Phase that this ticket is related to. Each ticket can only be related to a single object, this is enforced by the TicketConfiguration trigger.</description>
        <inlineHelpText>Project Phase that this ticket is related to. Each ticket can only be related to a single object.</inlineHelpText>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Task that this ticket is related to. Each ticket can only be related to a single object, this is enforced by the TicketConfiguration trigger.</description>
        <inlineHelpText>Project Task that this ticket is related to. Each ticket can only be related to a single object.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project that this ticket is related to. Each ticket can only be related to a single object, this is enforced by the TicketConfiguration trigger</description>
        <inlineHelpText>Project that this ticket is related to. Each ticket can only be related to a single object.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Related_To__c</fullName>
        <description>Get the name of the Project, Phase or Task the ticket is related to, if there is no relation the value is &apos;No Parent;</description>
        <formula>IF(NOT(ISBLANK(project_cloud__Project__c)),
	&apos;Project: &apos; &amp; project_cloud__Project__r.Name,
	/*ELSE*/ IF(NOT(ISBLANK(project_cloud__Project_Phase__c)),
		&apos;Project Phase: &apos; &amp; project_cloud__Project_Phase__r.Name,
		/*ELSE*/ IF(NOT(ISBLANK(project_cloud__Project_Task__c)),
			&apos;Project Task: &apos; &amp; project_cloud__Project_Task__r.Name,
			/*ELSE*/
			&apos;No Parent&apos;
		)
	)
)</formula>
        <inlineHelpText>Display the name of the Project, Phase or Task the ticket is related to, or &apos;No Parent&apos;</inlineHelpText>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <controllingField>project_cloud__Status__c</controllingField>
            <picklistValues>
                <fullName>Resolved</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <description>The current status of the ticket</description>
        <inlineHelpText>The current status of the ticket</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Ticket_Name__c</fullName>
        <description>A brief explanation of the ticket. Not to be confused with the description, which is a more detailed explanation of the problem and possible suggestions for a solution</description>
        <inlineHelpText>A brief explanation of the ticket. See the description for more detail</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <description>An optional way to classify tickets, this classification is used to sort the tickets in the tree</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <description>Sum of the hours completed on the ticket using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
        <inlineHelpText>This is a system object and should not be visible</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>project_cloud__One_Project_Phase_or_Task</fullName>
        <active>true</active>
        <description>Only one of the lookups to the Project Objects can be selected</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__Project__c), 0, 1) + IF(ISBLANK(project_cloud__Project_Phase__c), 0, 1) + IF(ISBLANK(project_cloud__Project_Task__c), 0, 1) &gt; 1</errorConditionFormula>
        <errorMessage>Please select only one of: Project, Phase or Task</errorMessage>
    </validationRules>
</CustomObject>